--- a/laokou-cloud/laokou-monitor/pom.xml
+++ b/laokou-cloud/laokou-monitor/pom.xml
@@ -18,9 +18,9 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>io.github.koushenhai</groupId>
+        <groupId>org.laokou</groupId>
         <artifactId>laokou-cloud</artifactId>
-        <version>3.0.6-M1</version>
+        <version>3.0.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-monitor</artifactId>
@@ -31,7 +31,7 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.github.koushenhai</groupId>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-common-banner</artifactId>
         </dependency>
         <dependency>
