--- a/laokou-common/laokou-common-core/pom.xml
+++ b/laokou-common/laokou-common-core/pom.xml
@@ -18,9 +18,9 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>io.github.koushenhai</groupId>
+    <groupId>org.laokou</groupId>
     <artifactId>laokou-common</artifactId>
-    <version>3.0.6-M1</version>
+    <version>3.0.5</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>laokou-common-core</artifactId>
@@ -113,7 +113,7 @@
       <artifactId>httpclient5</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.github.koushenhai</groupId>
+      <groupId>org.laokou</groupId>
       <artifactId>laokou-common-i18n</artifactId>
       <exclusions>
         <exclusion>
@@ -123,7 +123,7 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>io.github.koushenhai</groupId>
+      <groupId>org.laokou</groupId>
       <artifactId>laokou-common-banner</artifactId>
     </dependency>
   </dependencies>
