--- a/laokou-common/laokou-common-rocketmq/pom.xml
+++ b/laokou-common/laokou-common-rocketmq/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>laokou-common</artifactId>
-        <groupId>io.github.koushenhai</groupId>
-        <version>3.0.6-M1</version>
+        <groupId>org.laokou</groupId>
+        <version>3.0.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-common-rocketmq</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>io.github.koushenhai</groupId>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-common-core</artifactId>
         </dependency>
         <dependency>
