--- a/laokou-service/laokou-admin/pom.xml
+++ b/laokou-service/laokou-admin/pom.xml
@@ -18,14 +18,14 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>io.github.koushenhai</groupId>
+        <groupId>org.laokou</groupId>
         <artifactId>laokou-service</artifactId>
-        <version>3.0.6-M1</version>
+        <version>3.0.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.koushenhai</groupId>
+    <groupId>org.laokou</groupId>
     <artifactId>laokou-admin</artifactId>
-    <version>3.0.6-M1</version>
+    <version>3.0.5</version>
     <packaging>pom</packaging>
     <modules>
         <module>laokou-admin-server</module>
