--- a/laokou-service/laokou-module/laokou-test/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/pom.xml
@@ -4,12 +4,12 @@
     <packaging>pom</packaging>
     <parent>
         <artifactId>laokou-module</artifactId>
-        <groupId>io.github.koushenhai</groupId>
-        <version>3.0.6-M1</version>
+        <groupId>org.laokou</groupId>
+        <version>3.0.5</version>
     </parent>
-    <groupId>io.github.koushenhai</groupId>
+    <groupId>org.laokou</groupId>
     <artifactId>laokou-test</artifactId>
-    <version>3.0.6-M1</version>
+    <version>3.0.5</version>
     <modules>
         <module>laokou-test-netty</module>
         <module>laokou-test-rocketmq</module>
