--- a/laokou-service/laokou-module/pom.xml
+++ b/laokou-service/laokou-module/pom.xml
@@ -19,12 +19,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>laokou-service</artifactId>
-        <groupId>io.github.koushenhai</groupId>
-        <version>3.0.6-M1</version>
+        <groupId>org.laokou</groupId>
+        <version>3.0.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.koushenhai</groupId>
-    <version>3.0.6-M1</version>
+    <groupId>org.laokou</groupId>
+    <version>3.0.5</version>
     <artifactId>laokou-module</artifactId>
     <packaging>pom</packaging>
 
