--- a/laokou-release/pom.xml
+++ b/laokou-release/pom.xml
@@ -45,7 +45,7 @@
         <developer>
             <name>laokou</name>
             <email>2413176044@qq.com</email>
-            <organization>laokou.org</organization>
+            <organization>https://github.com/laokouyun</organization>
         </developer>
     </developers>
     <scm>
