--- a/laokou-service/laokou-module/laokou-test/laokou-test-liquibase/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-liquibase/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.laokou</groupId>
         <version>3.0.5</version>
     </parent>
-    <artifactId>laokou-test-rocketmq</artifactId>
+    <artifactId>laokou-test-liquibase</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -17,12 +17,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-core</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-rocketmq</artifactId>
+            <artifactId>laokou-common-liquibase</artifactId>
         </dependency>
     </dependencies>
 
