--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -75,6 +75,7 @@
         <module>laokou-common-p6spy</module>
         <module>laokou-common-flyway</module>
         <module>laokou-common-liquibase</module>
+        <module>laokou-common-log4j2</module>
     </modules>
 
 </project>
