--- a/pom.xml
+++ b/pom.xml
@@ -196,7 +196,7 @@
                 <MYSQL-DB-XXL-JOB>xxl-job-config</MYSQL-DB-XXL-JOB>
                 <MYSQL-POWER-JOB>power-job-config</MYSQL-POWER-JOB>
                 <MYSQL-PORT>3306</MYSQL-PORT>
-                <NACOS-NAMESPACE>public</NACOS-NAMESPACE>
+                <NACOS-NAMESPACE>LAOKOU_GROUP</NACOS-NAMESPACE>
                 <NACOS-DISCOVERY-ADDRESS>127.0.0.1:8848</NACOS-DISCOVERY-ADDRESS>
                 <NACOS-CONFIG-ADDRESS>127.0.0.1:8848</NACOS-CONFIG-ADDRESS>
                 <NACOS-GROUP>DEFAULT_GROUP</NACOS-GROUP>
