--- a/laokou-cloud/laokou-xxl-job/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-xxl-job/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
   application:
     name: @pom.artifactId@
   profiles:
-    active: @profile.active@
+    active: @PROFILE-ACTIVE@
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: @MYSQL-USERNAME@
