--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
     name: @pom.parent.artifactId@
   profiles:
     # 环境 dev|test|prod
-    active: @profile.active@
+    active: @PROFILE-ACTIVE@
   cloud:
     loadbalancer:
       nacos:
