--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     name: @pom.parent.artifactId@
   profiles:
     # 环境 dev|test|prod
-    active: @profile.active@
+    active: @PROFILE-ACTIVE@
   servlet:
     multipart:
       enabled: true
