--- a/pom.xml
+++ b/pom.xml
@@ -208,7 +208,7 @@
                 <SEATA-PASSWORD>seata</SEATA-PASSWORD>
                 <SENTINEL-USERNAME>sentinel</SENTINEL-USERNAME>
                 <SENTINEL-PASSWORD>sentinel</SENTINEL-PASSWORD>
-                <profile.active>dev</profile.active>
+                <PROFILE-ACTIVE>dev</PROFILE-ACTIVE>
                 <MAIL-PASSWORD>xxx</MAIL-PASSWORD>
                 <MAIL-USERNAME>xxx</MAIL-USERNAME>
             </properties>
@@ -239,7 +239,7 @@
                 <SEATA-PASSWORD>seata</SEATA-PASSWORD>
                 <SENTINEL-USERNAME>sentinel</SENTINEL-USERNAME>
                 <SENTINEL-PASSWORD>sentinel</SENTINEL-PASSWORD>
-                <profile.active>test</profile.active>
+                <PROFILE-ACTIVE>test</PROFILE-ACTIVE>
                 <MAIL-PASSWORD>ENC(/GuIBb+rM1VYKHnngv5WZD9S7JHZ+6FpZvtoSTNsKPM=)</MAIL-PASSWORD>
                 <MAIL-USERNAME>2413176044@qq.com</MAIL-USERNAME>
             </properties>
@@ -268,7 +268,7 @@
                 <SENTINEL-USERNAME>xxx</SENTINEL-USERNAME>
                 <SENTINEL-PASSWORD>xxx</SENTINEL-PASSWORD>
                 <MAIL-PASSWORD>xxx</MAIL-PASSWORD>
-                <profile.active>prod</profile.active>
+                <PROFILE-ACTIVE>prod</PROFILE-ACTIVE>
                 <MAIL-PASSWORD>xxx</MAIL-PASSWORD>
                 <MAIL-USERNAME>xxx</MAIL-USERNAME>
             </properties>
