--- a/laokou-release/pom.xml
+++ b/laokou-release/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.laokou</groupId>
-        <artifactId>laokou-parent</artifactId>
+        <artifactId>KCloud-Platform-Alibaba</artifactId>
         <version>3.0.5</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
