--- a/laokou-service/laokou-auth/laokou-auth-client/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-client/pom.xml
@@ -44,5 +44,9 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-swagger</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-jasypt</artifactId>
+        </dependency>
     </dependencies>
 </project>
