--- a/laokou-service/pom.xml
+++ b/laokou-service/pom.xml
@@ -32,5 +32,6 @@
         <module>laokou-admin</module>
         <module>laokou-module</module>
         <module>laokou-auth</module>
+        <module>laokou-generate</module>
     </modules>
 </project>
