--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -77,6 +77,7 @@
         <module>laokou-common-liquibase</module>
         <module>laokou-common-log4j2</module>
         <module>laokou-common-trace</module>
+        <module>laokou-common-logback</module>
     </modules>
 
 </project>
