--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -101,11 +101,18 @@
         <liquibase-core.version>4.21.0</liquibase-core.version>
         <!--log4j版本-->
         <log4j.version>2.19.0</log4j.version>
+        <!--logback-kafka-appender版本-->
+        <logback-kafka-appender.version>0.2.0-RC2</logback-kafka-appender.version>
     </properties>
 
     <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.github.danielwegener</groupId>
+                <artifactId>logback-kafka-appender</artifactId>
+                <version>${logback-kafka-appender.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
