--- a/laokou-common/laokou-common-logback/pom.xml
+++ b/laokou-common/laokou-common-logback/pom.xml
@@ -10,6 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-common-logback</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-logappender</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.danielwegener</groupId>
+            <artifactId>logback-kafka-appender</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
