--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
@@ -27,6 +27,10 @@
     <artifactId>laokou-im-server</artifactId>
     <dependencies>
         <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-logback</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
             <exclusions>
