--- a/laokou-service/laokou-module/laokou-test/laokou-test-rocketmq/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-rocketmq/pom.xml
@@ -24,6 +24,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-rocketmq</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
