--- a/laokou-service/laokou-module/laokou-logstash/pom.xml
+++ b/laokou-service/laokou-module/laokou-logstash/pom.xml
@@ -3,11 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>laokou-cloud</artifactId>
+        <artifactId>laokou-module</artifactId>
         <groupId>org.laokou</groupId>
         <version>3.0.6</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>laokou-rocketmq-dashboard</artifactId>
+    <artifactId>laokou-logstash</artifactId>
+    <version>3.0.6</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>laokou-logstash-rocketmq</module>
+        <module>laokou-logstash-cllient</module>
+    </modules>
 
 </project>
