--- a/laokou-service/laokou-module/laokou-logstash/laokou-logstash-rocketmq/pom.xml
+++ b/laokou-service/laokou-module/laokou-logstash/laokou-logstash-rocketmq/pom.xml
@@ -15,6 +15,18 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-logstash-cllient</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-rocketmq</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-cors</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
