--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -78,6 +78,7 @@
         <module>laokou-common-log4j2</module>
         <module>laokou-common-trace</module>
         <module>laokou-common-logback</module>
+        <module>laokou-common-algorithm</module>
     </modules>
 
 </project>
