--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -25,6 +25,8 @@
     <packaging>pom</packaging>
     <properties>
         <laokou.version>3.0.6</laokou.version>
+        <!--spring-boot版本-->
+        <spring-boot.version>3.0.6</spring-boot.version>
         <!--lombok版本-->
         <lombok.version>1.18.26</lombok.version>
         <!--mysql版本-->
@@ -105,15 +107,27 @@
         <logback-kafka-appender.version>0.2.0-RC2</logback-kafka-appender.version>
         <!--rocketmq-logappender版本-->
         <rocketmq-logappender.version>5.0.0-PREVIEW</rocketmq-logappender.version>
+        <!--kafka版本-->
+        <kafka.version>3.0.4</kafka.version>
     </properties>
 
     <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-logappender</artifactId>
                 <version>${rocketmq-logappender.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+                <version>${kafka.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.danielwegener</groupId>
