--- a/laokou-common/laokou-common-kafka/pom.xml
+++ b/laokou-common/laokou-common-kafka/pom.xml
@@ -8,4 +8,15 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-common-kafka</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
