--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -79,6 +79,7 @@
         <module>laokou-common-trace</module>
         <module>laokou-common-logback</module>
         <module>laokou-common-algorithm</module>
+        <module>laokou-common-skywalking</module>
     </modules>
 
 </project>
