feat: 升级es api至 8.6.2

--- a/laokou-service/laokou-module/laokou-test/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/pom.xml
@@ -15,5 +15,6 @@
         <module>laokou-test-juc</module>
         <module>laokou-test-liquibase</module>
         <module>laokou-test-web</module>
+        <module>laokou-test-elasticsearch</module>
     </modules>
 </project>
