--- a/laokou-service/laokou-module/laokou-test/laokou-test-elasticsearch/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-elasticsearch/src/main/resources/application.yml
@@ -4,6 +4,6 @@ server:
 spring:
   elasticsearch:
     uris:
-      - 1
-    username: 1
-    password: 1
+      - http://101.33.251.11:9200
+    username: elastic
+    password: koushenhai123456
