--- a/laokou-service/laokou-module/laokou-test/laokou-test-elasticsearch/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-elasticsearch/pom.xml
@@ -51,6 +51,10 @@
             <groupId>com.github.ulisesbocchio</groupId>
             <artifactId>jasypt-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
